--- a/CharlesVess/CharlesVess.html
+++ b/CharlesVess/CharlesVess.html
@@ -29,7 +29,12 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Charles Vess (1951) is an American fantasy artist and comics artist who has specialized in the illustration of myths and fairy tales. His influences include British "Golden Age" book illustrator Arthur Rackham, Czech Art Nouveau painter Alphonse Mucha, and comic-strip artist Hal Foster, among others. Vess has won several awards for his illustrations.
+Charles Vess (1951) is an American fantasy artist and comics artist who has specialized in the illustration of myths and fairy tales. Famous works include:
+<li><a href="../Starstruck/Starstruck.html">Starstruck</a>
+<li><a href="../BooksOfMagic/BooksOfMagic.html">Books of Magic</a>
+<li><a href="../Stardust/Stardust.html">Stardust</a>
+</p><p>
+His influences include British "Golden Age" book illustrator Arthur Rackham, Czech Art Nouveau painter Alphonse Mucha, and comic-strip artist Hal Foster, among others. Vess has won several awards for his illustrations.
 </p>
 </body>
 </html>
