--- a/NeilGaiman/NeilGaiman.html
+++ b/NeilGaiman/NeilGaiman.html
@@ -35,11 +35,12 @@
 </p><p>
 Neil Richard MacKinnon Gaiman(November 1960) is an English author of short fiction, novels, comic books, graphic novels, nonfiction, audio theatre, and films. His works include:
 <li><a href="../Sandman/Sandman.html">The Sandman</a>
-<li>Stardust
+<li><a href="../Stardust/Stardust.html">Stardust</a>
 <li>American Gods
 <li>Coraline
 <li>The Graveyard Book
 <li><a href="../SandmanOverture/SandmanOverture.html">The Sandman: Overture</a>
+<li><a href="../BooksOfMagic/BooksOfMagic.html">Books of Magic</a>
 </p><p>
 He has won numerous awards, including the Hugo, Nebula, and Bram Stoker awards, as well as the Newbery and Carnegie medals. He is the first author to win both the Newbery and the Carnegie medals for the same work, The Graveyard Book (2008). In 2013, The Ocean at the End of the Lane was voted Book of the Year in the British National Book Awards.
 </p>
