--- a/Stardust/Stardust.html
+++ b/Stardust/Stardust.html
@@ -20,12 +20,26 @@ Novel in 1997 by Avon. 4 issues 1997 - 1998 by Vertigo (DC). Movie in 2007 by Pa
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="Stardust1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Stardust2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Stardust3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Stardust4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Stardust5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Stardust6.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-
+Stardust is a fantasy novel created and written by <a href="../NeilGaiman/NeilGaiman.html">Neil Gaiman</a> with illustrations by <a href="../CharlesVess/CharlesVess.html">Charles Vess</a>. 
+</p><p>
+Stardust has a different tone and style from most of Gaiman's prose fiction, being consciously written in the tradition of pre-Tolkien English fantasy, following in the footsteps of authors such as Lord Dunsany and Hope Mirrlees. It is concerned with the adventures of a young man from the village of Wall, which borders the magical land of Faerie.
+</p><p>
+In 2007, a film based on the novel was released to generally positive reviews. Gaiman has also occasionally made references to writing a sequel, or at least another book concerning the village of Wall.
+</p><p>
+The story begins in late April 1839, as John William Draper had just photographed the Moon and Charles Dickens was serialising Oliver Twist. The majority of the book takes place seventeen years later, starting around October 1856.
+</p><p>
+Stardust is a 2007 romantic fantasy adventure film directed by Matthew Vaughn and co-written by Vaughn and Jane Goldman. The film features an ensemble cast led by Claire Danes, Charlie Cox, Sienna Miller, Ricky Gervais, Jason Flemyng, Rupert Everett, Peter O'Toole, Michelle Pfeiffer, and Robert De Niro, with narration by Ian McKellen.
 </p>
+
 </body>
 </html>
