--- a/index.html
+++ b/index.html
@@ -8342,6 +8342,13 @@
 </tr>
 
 <tr>
+<td>John Bolton</td>
+<td>1951</td>
+<td>Creator</td>
+<td><a href="JohnBolton/JohnBolton.html">Details</a></td>
+</tr>
+
+<tr>
 <td>John Buscema</td>
 <td>1927</td>
 <td>Creator</td>
