--- a/PCraigRussell/PCraigRussell.html
+++ b/PCraigRussell/PCraigRussell.html
@@ -33,9 +33,18 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Philip Craig Russell (born October 30, 1951) is an American comics artist, writer, and illustrator. His work has won multiple Harvey and Eisner Awards. Russell was the first mainstream comic book creator to come out as openly gay.
+Philip Craig Russell (born October 30, 1951) is an American comics artist, writer, and illustrator. His work has won multiple Harvey and Eisner Awards. Notable works include:
+<li><a href="../AmazingFantasy/AmazingFantasy.html">Amazing Adventures</a> #18-39 Killraven
+<li><a href="../MarvelGraphicNovel/MarvelGraphicNovel.html">Marvel Graphic Novel #2 Elric</a>
+<li><a href="../MarvelGraphicNovel/MarvelGraphicNovel.html">Marvel Graphic Novel #7 Killraven</a>
+<li><a href="../Elric/elric.html">Elric</a> PC Comics series
+<li><a href="../Coraline/Coraline.html">Coraline</a> Comic Book Adaptation
 </p><p>
- Russell first became well known with his 11–issue Amazing Adventures run and subsequent graphic novel featuring Killraven, hero of a future version of H. G. Wells' The War of the Worlds, collaborating with writer Don McGregor. Comics historian Peter Sanderson wrote that, "McGregor's finest artistic collaborator on the series was P. Craig Russell, whose sensitive, elaborate artwork, evocative of Art Nouveau illustration, gave the landscape of Killraven's America a nostalgic, pastoral feel, and the Martian architecture the look of futuristic castles."At DC Comics, Russell inked Batman stories in Batman Family and Detective Comics over the pencils of Michael Golden and Jim Starlin respectively.Withdrawing for a while from mainstream comics, Russell produced a number of experimental strips, many of which were later published in his Night Music series and in Epic Illustrated.
+Russell first became well known with his Amazing Adventures run and subsequent graphic novel featuring Killraven, hero of a future version of H. G. Wells' The War of the Worlds, collaborating with writer Don McGregor. Comics historian Peter Sanderson wrote that, "McGregor's finest artistic collaborator on the series was P. Craig Russell, whose sensitive, elaborate artwork, evocative of Art Nouveau illustration, gave the landscape of Killraven's America a nostalgic, pastoral feel, and the Martian architecture the look of futuristic castles."
+</p><p>
+Russell's first Elric story, the Roy Thomas scripted "The Dreaming City", was published by Marvel Comics in 1982 as Marvel Graphic Novel #2, following initial publication of the first half of the graphic novel in Epic Illustrated. For the next series, "Elric of Melnibone", also written by Roy Thomas, Russell shared art duties with Michael T. Gilbert. This story was published by Pacific Comics as Elric issues #1–6 in 1983–1984. Russell did not return to Elric until 1997 when he collaborated directly with Michael Moorcock on Elric: Stormbringer, co-published by Dark Horse Comics and Topps Comics.
+</p><p>
+At DC Comics, Russell inked Batman stories in Batman Family and Detective Comics over the pencils of Michael Golden and Jim Starlin respectively.Withdrawing for a while from mainstream comics, Russell produced a number of experimental strips, many of which were later published in his Night Music series and in Epic Illustrated.
 </p>
 </body>
 </html>
