--- a/index.html
+++ b/index.html
@@ -1383,6 +1383,13 @@
 </tr>
 
 <tr>
+<td>American Gods</td>
+<td>2001</td>
+<td>William Morrow</td>
+<td><a href="AmericanGods/AmericanGods.html">Details</a></td>
+</tr>
+
+<tr>
 <td>American Hustle</td>
 <td>2013</td>
 <td>Columbia</td>
@@ -3945,6 +3952,13 @@
 <td>1992</td>
 <td>Marvel</td>
 <td><a href="CopsTheJob/CopsTheJob.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Coraline</td>
+<td>2002</td>
+<td>Harper Collins</td>
+<td><a href="Coraline/Coraline.html">Details</a></td>
 </tr>
 
 <tr>
