--- a/Elric/elric.html
+++ b/Elric/elric.html
@@ -9,7 +9,8 @@
 
 <body>
 <img src="elric01.jpg"> <br>
-1961 Michael Moorecock<br>
+6 issues in 1983 by PC<br>
+Illustrated by <a href="../PCraigRussell/PCraigRussell.html">P. Craig Russell</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -32,7 +33,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Elric of Melniboné is a fictional character created by Michael Moorcock and the protagonist of a series of sword and sorcery stories taking place on an alternative Earth. The proper name and title of the character is Elric VIII, 428th Emperor of Melniboné. Later stories by Moorcock marked Elric as a facet of the Eternal Champion.
+Elric of Melniboné is a fictional character created by Michael Moorcock in 1961 and the protagonist of a series of sword and sorcery stories taking place on an alternative Earth. The proper name and title of the character is Elric VIII, 428th Emperor of Melniboné. Later stories by Moorcock marked Elric as a facet of the Eternal Champion.
 </p><p>
 Elric first appeared in print in Moorcock's novella "The Dreaming City" (Science Fantasy No. 47, June 1961). Moorcock's doomed albino antihero is one of the better known in fantasy literature, having crossed over into a wide variety of media, such as role-playing games, comics, music, and film. The stories have been continuously in print since the 1970s.
 </p><p>
