--- a/CatWoman/CatWoman.html
+++ b/CatWoman/CatWoman.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-<img src="CatWoman01.jpg"> <br>
-4 issues in 1989, 96 issues 1993-2001, 82 issues 2002-2008, 53 issues 2011-2016, 13 issues 2018-2019 by DC.
+<img src="Catwoman01.jpg"> <br>
+4 issues in 1989, 96 issues 1993-2001, 83 issues 2002-2008, 53 issues 2011-2016, 13 issues 2018-2019 by DC.
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -19,21 +19,26 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="CatWoman01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="CatWoman02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="CatWoman03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="CatWoman04.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="CatWoman05.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="CatWoman06.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="CatWoman07.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="CatWoman08.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="CatWoman09.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="CatWoman10.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="CatWoman11.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="CatWoman12.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="CatWoman13.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="CatWoman14.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="CatWoman15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Catwoman01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Catwoman02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Catwoman03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Catwoman04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Catwoman05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Catwoman06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Catwoman07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Catwoman08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Catwoman09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Catwoman10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Catwoman11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Catwoman12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Catwoman13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Catwoman14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Catwoman15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CatwomanA.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CatwomanB.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CatwomanC.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CatwomanD.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CatwomanE.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -46,6 +51,8 @@ Catwoman is a Gotham City burglar who typically wears a tight, one-piece outfit 
 Catwoman has been featured in many media adaptations related to Batman. Actresses Julie Newmar, Lee Meriwether, and Eartha Kitt introduced her to a large audience on the 1960s Batman television series and the 1966 Batman film. Michelle Pfeiffer portrayed the character in 1992's Batman Returns. Halle Berry starred in 2004's Catwoman; this, however, was a critical and commercial flop and bears little similarity to the Batman character. Anne Hathaway portrayed Selina Kyle in the 2012 film The Dark Knight Rises, and a young version of Kyle was played by Camren Bicondova on the 2014 television series Gotham. Actress Lili Simmons portrayed an older version of Kyle in the series finale.
 </p><p>
 Catwoman was ranked 11th on IGN's list of the "Top 100 Comic Book Villains of All Time", and 51st on Wizard magazine's "100 Greatest Villains of All Time" list. Conversely, she was ranked 20th on IGN's "Top 100 Comic Book Heroes of All Time" list.
+</p><p>
+2002-2008 series covers #44-83 by <a href="../AdamHughes/AdamHughes.html">Adam Hughes</a>
 </p>
 </body>
 </html>
