--- a/WonderWoman/WonderWoman.html
+++ b/WonderWoman/WonderWoman.html
@@ -121,6 +121,15 @@ Publisher: DC<br>
 <div class="mySlides" style="text-align: center;"><img src="WonderWoman099.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WonderWoman100.jpg"></div>
 
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman139.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman140.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman141.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman142.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman143.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman144.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman145.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman146.jpg"></div>
+
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
@@ -133,6 +142,8 @@ Wonder Woman was created by the American psychologist and writer William Moulton
 Wonder Woman's origin story relates that she was sculpted from clay by her mother Queen Hippolyta and given life by Aphrodite, along with superhuman powers as gifts by the Greek gods. In recent years, DC changed her background with the revelation that she is the daughter of Zeus and Hippolyta, jointly raised by her mother and her aunts Antiope and Menalippe. In the 1980s artist George Perez gave her a muscular look and emphasized her Amazonian heritage. Wonder Woman's Amazonian training helped to develop a wide range of extraordinary skills in tactics, hunting, and combat. She possesses an arsenal of advanced technology, including the Lasso of Truth, a pair of indestructible bracelets, a tiara which serves as a projectile, and, in older stories, a range of devices based on Amazon technology. 
 </p><p>
 Wonder Woman's character was created during World War II; the character in the story was initially depicted fighting Axis military forces as well as an assortment of colorful super villains, although over time her stories came to place greater emphasis on characters, deities, and monsters from Greek mythology. Many stories depicted Wonder Woman rescuing herself from bondage, which defeated the "damsels in distress" trope that was common in comics during the 1940s. In the decades since her debut, Wonder Woman has gained a cast of enemies bent on eliminating the Amazon, including classic villains such as Ares, Cheetah, Doctor Poison, Circe, Doctor Psycho, and Giganta, along with more recent adversaries such as Veronica Cale and the First Born. Wonder Woman has also regularly appeared in comic books featuring the superhero teams Justice Society (from 1941) and Justice League (from 1960).
+</p><p>
+Covers by <a href="../AdamHughes/AdamHughes.html">Adam Hughes</a> 1987-2006 series, issues #139-146, 150-161, 164-174, 176-178, and 184-197.
 </p>
 
 </body>
