--- a/index.html
+++ b/index.html
@@ -12441,6 +12441,13 @@
 </tr>
 
 <tr>
+<td>Rocketeer</td>
+<td>1982</td>
+<td>PC</td>
+<td><a href="Rocketeer/Rocketeer.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rocko's Modern Life</td>
 <td>1993</td>
 <td>Nickelodeon</td>
