--- a/Banner/Banner.html
+++ b/Banner/Banner.html
@@ -10,7 +10,7 @@
 <body>
 <img src="Banner1.jpg"><br>
 4 issues 2001 Marvel<br>
-Illustrator: Richard Corben, Writer: Brian Azzarello
+Illustrator: <a href="../RichardCorben/RichardCorben.html">Richard Corben</a>, Writer: Brian Azzarello
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
