--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -151,7 +151,7 @@ Richard Corben<br>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Richard Corben (born October 1, 1940) is an American illustrator and comic book artist best known for his character <a href="../Den/Den.html">Den</a>, featured in <a href="https://blzim.github.io/kb/Creation/HeavyMetal/HeavyMetal.html">Heavy Metal</a> the movie, as well as his comics featured in Heavy Metal magazine. He is the winner of the 2009 Spectrum Grand Master Award and the 2018 Grand Prix at Angouleme. In 2012 he was elected to the Will Eisner Award Hall of Fame.
+Richard Corben (born October 1, 1940) is an American illustrator and comic book artist best known for his character <a href="../Den/Den.html">Den</a>, featured in <a href="../HeavyMetal/HeavyMetal.html">Heavy Metal</a> the movie, as well as his comics featured in Heavy Metal magazine. He is the winner of the 2009 Spectrum Grand Master Award and the 2018 Grand Prix at Angouleme. In 2012 he was elected to the Will Eisner Award Hall of Fame.
 </p><p>
 After working as a professional animator, Corben started doing underground comics, including Grim Wit, Slow Death, Skull, Rowlf, Fever Dreams and his own anthology <a href="RichardCorbenArt37.jpg">Fantagor</a>. In 1970 he began illustrating horror and science-fiction stories for Warren Publishing.
 </p><p>
@@ -332,7 +332,7 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>The Split (Strange Adventures #3)</td><td>2000</td><td>Joe Lansdale</td><td>DC Vertigo</td></tr>
 <tr><td>BLUDD Webisodes</td><td>2000</td><td>Jan Strnad</td><td>BLUDD</td></tr>
 <tr><td>Flinch #2, 16 (cover)</td><td>2001</td><td>(cover)</td><td>DC Vertigo</td></tr>
-<tr><td><a href="https://blzim.github.io/kb/Creation/Banner/Banner.html">Startling Stories: Banner</a> (#1-4)</td><td>2001</td><td>Brian Azzarello</td><td>Marvel</td></tr>
+<tr><td><a href="../Banner/Banner.html">Startling Stories: Banner</a> (#1-4)</td><td>2001</td><td>Brian Azzarello</td><td>Marvel</td></tr>
 <tr><td>The Crusades (#8 cover)</td><td>2001</td><td>Corben</td><td>DC Vertigo</td></tr>
 <tr><td>Cyclops (Solo #2)</td><td>2002</td><td>Corben</td><td>DC</td></tr>
 <tr><td>The Plague (Solo)</td><td>2002</td><td>Corben</td><td>DC</td></tr>
