--- a/Cage/Cage.html
+++ b/Cage/Cage.html
@@ -22,6 +22,10 @@
 
 <div class="mySlides" style="text-align: center;"><img src="Cage1992.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Cage2002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Cage2002_2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Cage2002_3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Cage2002_4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Cage2002_5.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Cage2017.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -33,7 +37,7 @@
 </p><p>
 Luke Cage is hired by a Chicago newspaper as their resident superhero with Cage getting to take down bad guys for money and the newspaper getting the story; When Cage goes after a mobster, he ends up fighting Hardcore, a villain with an agenda that includes Cage.
 </p><p>
-2002 Issue #1: Art by Richard Corben, written by Brian Azzarello. Life on the streets is a high stakes game. There are winners and losers. Those that play by the rules, do so at their own risk, and often pay a price. Who's got their back? There's a man who can set things straight. A specialist. He doesn't come cheap, but if you've got the bank, he's got game. And plenty of it. Some know him as a "Hero for Hire." Some as a "Power Man." For others, he's an urban legend. He's all, and none, of the above. His name is Cage. It's time you got to know him. 
+2002 Issue #1: Art by <a href="../RichardCorben/RichardCorben.html">Richard Corben</a>, written by Brian Azzarello. Life on the streets is a high stakes game. There are winners and losers. Those that play by the rules, do so at their own risk, and often pay a price. Who's got their back? There's a man who can set things straight. A specialist. He doesn't come cheap, but if you've got the bank, he's got game. And plenty of it. Some know him as a "Hero for Hire." Some as a "Power Man." For others, he's an urban legend. He's all, and none, of the above. His name is Cage. It's time you got to know him. 
 </p><p>
 Dory Dickens wants justice for her daughter, cut down in her prime in the crossfire of a rapidly escalating gang war. In a sea of corrupt cops and rival gang-bangers, there's only one man with the juice to dispense the kind of street justice Dory craves, and his services don't come cheap. Lucky for Dory, the man called Cage has plenty of reason to play hero in a world where there are none.
 </p>
