--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -151,7 +151,16 @@ Richard Corben<br>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Richard Corben (born October 1, 1940) is an American illustrator and comic book artist best known for his character <a href="../Den/Den.html">Den</a>, featured in <a href="../HeavyMetal/HeavyMetal.html">Heavy Metal</a> the movie, as well as his comics featured in Heavy Metal magazine. He is the winner of the 2009 Spectrum Grand Master Award and the 2018 Grand Prix at Angouleme. In 2012 he was elected to the Will Eisner Award Hall of Fame.
+Richard Corben (born October 1, 1940) is an American illustrator and comic book artist best known for:
+<li> <a href="../Den/Den.html">Den</a> which featured in <a href="../HeavyMetal/HeavyMetal.html">Heavy Metal</a> the movie and magazine. 
+<li><a href="../VicAndBlood/VicAndBlood.html">Vic and Blood</a>
+<li><a href="../1984/1984.html">1984</a>
+<li><a href="../Creepy/Creepy.html">Creepy</a>
+<li><a href="../Eerie/Eerie.html">Eerie</a>
+<li><a href="../TwistedTales/TwistedTales.html">Twisted Tales</a>
+<li><a href="../Banner/Banner.html">Startling Stories: Banner</a>
+</p><p>
+Corben is the winner of the 2009 Spectrum Grand Master Award and the 2018 Grand Prix at Angouleme. In 2012 he was elected to the Will Eisner Award Hall of Fame.
 </p><p>
 After working as a professional animator, Corben started doing underground comics, including Grim Wit, Slow Death, Skull, Rowlf, Fever Dreams and his own anthology <a href="RichardCorbenArt37.jpg">Fantagor</a>. In 1970 he began illustrating horror and science-fiction stories for Warren Publishing.
 </p><p>
@@ -163,8 +172,9 @@ Corben did the cover of the debut studio album by American rock singer Meat Loaf
 </p><p>
 From 1986–1994 Corben operated his own publishing imprint, Fantagor Press. Among the titles Fantagor published were <a href="../Den/Den7.jpg">Den</a>, <a href="../Den/Den17.jpg">Den Saga</a>, <a href="RichardCorbenArt24.jpg">Horror in the Dark</a>,  <a href="RichardCorbenArt46.jpg">Rip in Time</a>, and <a href="RichardCorbenArt14.jpg">Son of Mutant World</a>. Fantagor went out of business after the 1994 contraction of the comics industry.
 </p><p>
-During this time he also contributed to other publications such as <a href="../VicAndBlood/VicAndBlood.html">Vic and Blood</a> for Mad Dog in 1987 and <a href="../TwistedTales/TwistedTales.html">Twisted Tales</a> for PC Comics.
+During this time he also contributed to other publications such as for Mad Dog in 1987 and Twisted Tales for PC Comics.
 </p><p>
+
 <table id="myTable" class="tablesorter">
 <thead style="text-align:left">
 <tr>
@@ -258,7 +268,7 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>New Tales of the Arabian Nights</td><td>1978</td><td>Jan Strnad</td><td>HM-Fantagor Press</td></tr>
 <tr><td>Woman Scorned (Eerie #90)</td><td>1978</td><td>Bruce Jones</td><td>Warren</td></tr>
 <tr><td>Ogre (Metal Hurlant #28)</td><td>1978</td><td>Richard Corben</td><td>Warren</td></tr>
-<tr><td>1984 (#1-2)</td><td>1978</td><td>(cover)</td><td>Warren</td></tr>
+<tr><td><a href="../1984/1984.html">1984</a> (#1-2)</td><td>1978</td><td>(cover)</td><td>Warren</td></tr>
 <tr><td>The Bodyssey</td><td>1979</td><td>John Pocsik</td><td>HM-Fantagor Press</td></tr>
 <tr><td>Blood's A Rover (cover)</td><td>1980</td><td>Harlan Ellison</td><td>Subterranean Press</td></tr>
 <tr><td>Jeremy Brood</td><td>1982</td><td>Jan Strnad</td><td>Fantagor Press</td></tr>
@@ -337,7 +347,7 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Cyclops (Solo #2)</td><td>2002</td><td>Corben</td><td>DC</td></tr>
 <tr><td>The Plague (Solo)</td><td>2002</td><td>Corben</td><td>DC</td></tr>
 <tr><td>Interactive video</td><td>2002</td><td>Jeff Williams</td><td>DARKSTAR</td></tr>
-<tr><td>Cage</td><td>2002</td><td>Brian Azzarello</td><td>Marvel</td></tr>
+<tr><td><a href="../Cage/Cage.html">Cage</a></td><td>2002</td><td>Brian Azzarello</td><td>Marvel</td></tr>
 <tr><td>The Mummy: Belzon's Treasure (Solo)</td><td>2003</td><td>Corben</td><td>DC</td></tr>
 <tr><td>Cowboy: Homecoming (Solo)</td><td>2003</td><td>Corben</td><td>DC: SOLO</td></tr>
 <tr><td>Spector, A Missing Life (Solo)</td><td>2003</td><td>John Arcudi</td><td>DC</td></tr>
@@ -385,7 +395,7 @@ During this time he also contributed to other publications such as <a href="../V
 </table>
 
 </body>
-<script src="https://blzim.github.io/kb/jquery-3.3.1.min.js" type="text/javascript"></script>
-<script src="https://blzim.github.io/kb/jquery.tablesorter.min.js" type="text/javascript"></script>
-<script src="https://blzim.github.io/kb/jqsort.js" type="text/javascript"></script>
+<script src="../jquery-3.3.1.min.js" type="text/javascript"></script>
+<script src="../jquery.tablesorter.min.js" type="text/javascript"></script>
+<script src="../jqsort.js" type="text/javascript"></script>
 </html>
