--- a/Juxtapoz/Juxtapoz.html
+++ b/Juxtapoz/Juxtapoz.html
@@ -37,11 +37,13 @@ Since 1994 by High Speed Productions<br>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz013.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz014.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz015.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz015a.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz016.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz017.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz018.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz019.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz020.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz020a.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz021.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz022.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz023.jpg"></div>
@@ -92,23 +94,29 @@ Since 1994 by High Speed Productions<br>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz068.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz069.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz070.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz070a.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz071.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz072.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz073.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz074.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz074a.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz075.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz076.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz077.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz077a.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz078.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz078a.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz079.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz080.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz081.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz081a.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz082.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz083.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz084.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz085.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz086.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz087.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz087a.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz088.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz089.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz090.jpg"></div>
@@ -172,6 +180,68 @@ Since 1994 by High Speed Productions<br>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz148.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz149.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Juxtapoz150.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz151.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz152.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz153.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz154.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz155.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz156.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz157.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz158.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz159.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz160.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz161.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz162.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz163.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz164.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz165.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz166.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz167.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz168.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz169.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz170.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz171.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz172.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz173.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz174.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz175.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz176.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz177.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz178.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz179.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz180.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz181.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz182.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz183.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz184.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz185.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz186.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz187.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz188.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz189.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz190.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz191.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz192.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz193.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz194.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz195.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz196.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz197.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz198.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz199.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz200.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz201.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz202.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz203.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz204.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz205.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz206.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz207.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz208.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz209.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz210.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz211.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Juxtapoz212.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
