--- a/RobertWilliams/RobertWilliams.html
+++ b/RobertWilliams/RobertWilliams.html
@@ -20,12 +20,40 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="RobertWilliams1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertWilliams25.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-
+Robert L. Williams, often styled Robt. Williams (born March 2, 1943), is an American painter, cartoonist, and founder of <a href="../Juxtapoz/Juxtapoz.html">Juxtapoz Art &amp; Culture Magazine</a>. Williams was one of the group of artists who produced <a href="../Zap/Zap.html">Zap Comix</a>, along with other underground cartoonists, such as <a href="../RobertCrumb/RobertCrumb.html">Robert Crumb</a>, S. Clay Wilson, and <a href="../GilbertShelton/GilbertShelton.html">Gilbert Shelton</a>. His mix of California car culture, cinematic apocalypticism, and film noir helped to create a new genre of psychedelic imagery.
+</p><p>
+To avoid the possibility of a jail term, Williams moved to Los Angeles in 1963 at the age of 20. There he enrolled in art courses at Los Angeles City College, where he contributed artwork to the school's paper, The Collegiate, and met Suzanne Chorna, his future wife.
+</p><p>
+After that, he briefly attended the California Institute of the Arts (formerly the Chouinard Art Institute), where he was branded an "illustrator" in derogatory fashion. Now married, Williams left the art school and became a professional artist in search of work. He worked for Black Belt magazine and designed containers for the Weyerhaeuser Corporation before he found his dream job in 1965 with Ed "Big Daddy" Roth.
 </p>
 </body>
 </html>
