--- a/index.html
+++ b/index.html
@@ -6704,6 +6704,13 @@
 </tr>
 
 <tr>
+<td>Gilbert Shelton</td>
+<td>1940</td>
+<td>Creator</td>
+<td><a href="GilbertShelton/GilbertShelton.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Girl Comics</td>
 <td>1949</td>
 <td>Marvel</td>
@@ -12456,7 +12463,7 @@
 
 <tr>
 <td>Robert Williams</td>
-<td>1932</td>
+<td>1943</td>
 <td>Creator</td>
 <td><a href="RobertWilliams/RobertWilliams.html">Details</a></td>
 </tr>
