--- a/index.html
+++ b/index.html
@@ -12399,6 +12399,13 @@
 </tr>
 
 <tr>
+<td>Rick Griffin</td>
+<td>1944</td>
+<td>Creator</td>
+<td><a href="RickGriffin/RickGriffin.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rick Jacobi</td>
 <td>2013</td>
 <td>Creator</td>
