--- a/Zap/zap.html
+++ b/Zap/zap.html
@@ -41,9 +41,8 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Series: 17 issues<br>
-Creators: <a href="../RobertCrumb/RobertCrumb.html">Robert Crumb</a>, Victor Moscoso, S. Clay Wilson, Gilbert Shelton, Spain Rodriguez, Robert Williams, Rick Griffin, Paul Mavrides<br>
-Publisher: 1968 Apex Novelty<br>
+Series: 17 issues in 1968 by Apex Novelty<br>
+Creators: <a href="../RobertCrumb/RobertCrumb.html">Robert Crumb</a>, <a href="../GilbertShelton/GilbertShelton.html">Gilbert Shelton</a>, <a href="../RobertWilliams/RobertWilliams.html">Robert Williams</a>, <a href="../RickGriffin/RickGriffin.html">Rick Griffin</a>, Paul Mavrides, Victor Moscoso, S. Clay Wilson, , Spain Rodriguez
 </p><p>
 Zap Comix is an underground comix series which was originally part of the youth counterculture of the late 1960s. While a few small-circulation self-published satirical comic books had been printed prior to this, Zap became the model for the "comix" movement that snowballed after its release.
 </p><p>
